Conflits résolus en gardant la version locale